# CMakeModules

./: .gitignore  README.md
include/CommonUtilities/: CopyAndMoveSemantics.hpp  ExceptionsToStderr.hpp  FunctionConstant.hpp  Miscellaneous.hpp  Streams.hpp  String.hpp  Testing.hpp
vedgTools/: AddCustomErrorPrefixDefinition.cmake  AddErrorPrefixDefinition.cmake  CMakeLicense.cmake  EnableAutomoc.cmake  EnableAutomocInSources.cmake  ExecutableFindQt.cmake  ExecutableGetPublicHeadersProperty.cmake  ExecutableQtStart.cmake  FindQtForTesting.cmake  GetGlobalProperty.cmake  LibraryAddTarget.cmake  LibraryAddTest.cmake  LibraryFindQt.cmake  LibraryGetPublicHeadersProperty.cmake  LibraryGetQtCoreUtilitiesPublicHeaders.cmake  LibraryGetQtXmlUtilitiesPublicHeaders.cmake  LibraryGetTemplateUtilitiesPublicHeaders.cmake  LibraryGetVenturousCorePublicHeaders.cmake  LibraryHeadersOnlyInit.cmake  LibraryInit.cmake  LibraryLinkQtCoreUtilities.cmake  LibraryLinkQtCoreUtilitiesToTarget.cmake  LibraryQtCoreUtilitiesStart.cmake  LibraryQtStart.cmake  LibrarySetPublicHeadersProperty.cmake  LibraryTemplateUtilitiesStart.cmake  LibraryWithQtInit.cmake  LibraryWithTestsFindQt.cmake  LinkQt.cmake  LinkQtParsed.cmake  ParseQtModules.cmake  QtAddResources.cmake  SetCxxFlags.cmake  StringAppendSlashIfAbsent.cmake
vedgTools/IncludeExpander/: CMakeLists.txt  IncludeExpander.kdev4  build_this  download_tclap_and_build_this  test_include_expander
vedgTools/IncludeExpander/src/: IncludeExpander.cpp  IncludeExpander.hpp  PatternUtilities.cpp  PatternUtilities.hpp  main.cpp
(+3 files in other folders)
